# gigaflow-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  QUERYING.md  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml  publish.yml
docs/: CNAME  gigaflow-env.md  index.md  publishing.md  querying.md  transforms.md
docs/sources/: README.md  arize-phoenix.md  braintrust.md  logfire.md  mlflow.md  otlp.md  wb-weave.md
docs/superpowers/plans/: 2026-06-07-cli-user-accounts.md  2026-06-07-multi-vendor-setup-wizard.md  2026-06-08-admin-allowlist-page.md  2026-06-08-email-only-waitlist-access.md  2026-06-08-onboarding-robustness.md  2026-06-08-setup-friction-fixes.md  2026-06-09-setup-connection-preflight.md
docs/superpowers/specs/: 2026-06-07-cli-user-accounts-design.md  2026-06-07-multi-vendor-setup-wizard-design.md  2026-06-08-admin-allowlist-page-design.md  2026-06-08-email-only-waitlist-access-design.md  2026-06-08-onboarding-robustness-design.md  2026-06-08-setup-friction-fixes-design.md  2026-06-09-setup-connection-preflight-design.md
gigaflow/: README.md  _auth.py  _config.py  _fmt.py  _http.py  _setup.py  cli.py
gigaflow/commands/: _retry.py  auth.py  compute.py  config.py  ingest.py  inspect.py  projects.py  query.py  setup.py  supplement.py  traces.py
gigaflow/transforms/: braintrust.yml  claude_code.yml  mlflow.yml  wb_weave.yml
tests/: _constants.py  conftest.py  test_auth_command_flow.py  test_auth_login.py  test_auth_refresh.py  test_auth_store.py  test_cli_credential_precedence.py  test_cli_polish.py  test_commands.py  test_compute_robustness.py  test_default_transform.py  test_hosted_backend.py  test_http_ok.py  test_ingest_command.py  test_readafterwrite_retry.py  test_setup_wizard_vendors.py
