[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaflow"
version = "0.4.2"
description = "GigaFlow CLI — connect LLM/agent traces (Arize Phoenix, Logfire, Braintrust, MLflow, W&B Weave, or OTLP) to GigaFlow and run Flow analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "GigaFlow AI, Inc.", email = "james@gigaflow.io"}
]
keywords = ["gigaflow", "llm", "agent", "observability", "tracing", "evaluation", "flow-analysis", "arize", "phoenix", "logfire", "braintrust", "mlflow", "weave", "otlp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

# Zero external deps — CLI uses stdlib only (urllib, argparse, json, etc.)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]
# Docs site toolchain (not needed to run the CLI — the runtime stays zero-dep).
# Build locally with:  uv run --extra docs mkdocs serve
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
gigaflow = "gigaflow.cli:main"

[project.urls]
Homepage = "https://github.com/GigaFlow-AI-Incorporated/gigaflow-sdk"
Documentation = "https://docs.gigaflow.io/"
Repository = "https://github.com/GigaFlow-AI-Incorporated/gigaflow-sdk"
Changelog = "https://github.com/GigaFlow-AI-Incorporated/gigaflow-sdk/blob/main/CHANGELOG.md"
Issues = "https://github.com/GigaFlow-AI-Incorporated/gigaflow-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gigaflow*"]

[tool.setuptools.package-data]
"gigaflow.transforms" = ["*.yml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
